--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -10,10 +10,13 @@
     background-size: cover;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   }
+
   
   .headerContainer {
     width: auto;
     margin-left: 50px;
+    position:relative;
+    z-index: 10;
   }
   
   .headerContainer h1 {
@@ -22,14 +25,16 @@
     font-size: 90px;
     height: 60px;
     font-weight: 50;
-    color: black;
+    color: rgb(255, 255, 255);
+    
+    
   }
   
   .headerContainer p {
     padding: 0;
     font-size: 40px;
     font-weight: lighter;
-    color: black;
+    color: rgb(255, 255, 255);
   }
   
   .headerContainer button {
